Fix scrollbar on sidepanel + basic scrollbar styling

--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -91,6 +91,8 @@
     --underline-inner: 1.50px solid var(--underline-color);
     --underline-outer: 0.75px solid var(--underline-color);
     --underline-space: 0.75px;
+
+    --scrollbar-width: 12px;
 }
 
 
@@ -172,6 +174,36 @@ h1 {
     padding-bottom: 10px;
     padding-top: 10px;
     font-size: 0;
+}
+
+
+
+/* Scrollbar */
+
+/* width */
+::-webkit-scrollbar {
+    width: var(--scrollbar-width);
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    margin-top: 1px;
+    background: #f1f1f1;
+    border-left: 2px solid var(--header-outline-color);
+    border-right: 2px solid var(--header-outline-color);
+    border-top:  1px solid var(--header-outline-color);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: var(--header-outline-color);
+    outline: 1px solid white;
+    outline-offset: -3px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: var(--color-secondary-2);
 }
 
 
